// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighItems (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2f3241",
        "borderColor": "#02ffff",
        "borderRadius": 2,
        "borderWidth": 1,
        "height": 20,
        "margin": 4,
        "width": 20,
      }
    }
  >
    <View
      style={
        Object {
          "height": 10,
          "width": 10,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomColor": "black",
            "borderBottomWidth": 2,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 5,
            "borderRightColor": "transparent",
            "borderRightWidth": 5,
            "borderTopColor": "transparent",
            "borderTopWidth": 5,
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 5,
            "borderRightColor": "transparent",
            "borderRightWidth": 5,
            "borderTopColor": "black",
            "borderTopWidth": 7,
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`HighItems (with black item) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#02ffff",
        "borderColor": "#02ffff",
        "borderRadius": 2,
        "borderWidth": 1,
        "height": 20,
        "margin": 4,
        "width": 20,
      }
    }
  >
    <View
      style={
        Object {
          "height": 10,
          "width": 10,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomColor": "black",
            "borderBottomWidth": 2,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 5,
            "borderRightColor": "transparent",
            "borderRightWidth": 5,
            "borderTopColor": "transparent",
            "borderTopWidth": 5,
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 5,
            "borderRightColor": "transparent",
            "borderRightWidth": 5,
            "borderTopColor": "black",
            "borderTopWidth": 7,
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
  </View>
</View>
`;
